[Update]検索・ソート機能

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,7 +1,6 @@
-<%= render 'layouts/header' %>
-<div class="container">
+<div class="container chat-show">
   <div class="row">
-    <div class="col-5 mx-auto">
+    <div class="col-5 mx-auto mt-3">
       <h2><%= @user.name %> さんとのチャット</h2>
       <div style="width: 400px;">
         <% @chats.each do |chat| %>
