--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -52,7 +52,7 @@
           <%= f.select :area, User.areas.keys.to_a, include_blank: "選択して下さい" %>
         </div>
         <div class="field">
-          <%= f.label :introduction, "自己紹介" %><br/>
+          <%= f.label :introduction, "その他(持ち級など)" %><br/>
           <%= f.text_area :introduction, size: "50x5" %>
         </div>
         <div class="field">
