--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,3 +5,21 @@
 .post-th {
   width: 30%;
 }
+
+.post-index {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.search {
+  width: 30%;
+}
+
+.list {
+  width: 60%;
+}
+
+.recommend-td {
+  width: 40%;
+}
