--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <p class="notice"><%= flash[:notice] %></p>
   <div class="row">
     <div class="col-6 mx-auto mt-3 mb-3">
       <h2 class="text-center mt-5">募集詳細</h2>
