--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -51,7 +51,7 @@
     </div>
     <div>
       <% if @user.id == current_user.id %>
-        <ul class="mt-5 text-left side_menu">
+        <ul class="mt-5 side_menu">
           <li class="nav-item">
             <%= link_to edit_user_path(@user), class: "btn" do %>
               <i class="fas fa-user-edit fa-lg"></i> プロフィール編集
