--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <p class="notice"><%= flash[:notice] %></p>
   <div class="row">
-    <div class="col-6 mx-auto mt-3 mb-3">
-      <h2 class="text-center mt-5">募集詳細</h2>
-      <table class="table mt-5">
+    <div class="col-6 mx-auto my-5">
+      <h2 class="text-center mb-5">募集詳細</h2>
+      <table class="table">
         <tr>
           <th>投稿者</th>
           <td><%= link_to @user.name, user_path(@user) %> (<%= @user.age %>歳、<%= @user.height %>cm)</td>
