--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -5,6 +5,7 @@
       <% @chats.each do |chat| %>
         <% if chat.user_id == current_user.id %>
           <div class="my-says">
+            <span class="small text-muted"><%= time_ago_in_words(chat.created_at)%>前</span>
             <p><%= chat.message %></p>
           </div>
         <% else %>
@@ -16,6 +17,7 @@
               <div class="other-says">
                 <p><%= chat.message %></p>
               </div>
+              <span class="small text-muted"><%= time_ago_in_words(chat.created_at)%>前</span>
             </div>
           </div>
         <% end %>
