--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-6 mx-auto">
-      <h2>プロフィール編集</h2>
+    <div class="col-6 mx-auto my-5">
+      <h2 class="text-center mb-5">プロフィール編集</h2>
       <% if @user.errors.any? %>
         <div class="notice">
           <ul>
