--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,7 +7,7 @@
         以下の項目にご記入の上、「新規登録」ボタンを押してください。<br/>
         (※は必須項目です。)
       </p>
-      <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
+      <%= form_with model: @user, url: users_sign_up_confirm_path(@user), method: :post, local: true do |f| %>
         <%= render "users/shared/error_messages", resource: resource %>
         <div class="field">
           <%= f.label :name, "名前※" %><br/>
@@ -40,16 +40,16 @@
           <%= f.number_field :height, min: 100, max: 200 %>cm
         </div>
         <div class="field">
+          <%= f.label :area, "地域※" %><br/>
+          <%= f.select :area, User.areas.keys.to_a, include_blank: "選択して下さい" %>
+        </div>
+        <div class="field">
           <%= f.label :experience, "ダンス歴※" %><br/>
           <%= f.select :experience, User.experiences.keys.to_a, include_blank: "選択して下さい" %>
         </div>
         <div class="field">
           <%= f.label :club_status, "学連経験※" %><br/>
           <%= f.select :club_status, User.club_statuses.keys.to_a, include_blank: "選択して下さい" %>
-        </div>
-        <div class="field">
-          <%= f.label :area, "地域※" %><br/>
-          <%= f.select :area, User.areas.keys.to_a, include_blank: "選択して下さい" %>
         </div>
         <div class="field">
           <%= f.label :introduction, "その他(持ち級など)" %><br/>
