--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,7 +4,7 @@
       <h1 class="text-center">Shall We Dance?</h1>
       <h2 class="text-center">新規登録</h2>
       <p class="sign_up_info text-center">
-        以下の項目にご記入の上、「新規登録」ボタンを押してください。<br/>
+        以下の項目にご記入の上、「確認画面へ」ボタンを押してください。<br/>
         (※は必須項目です。)
       </p>
       <%= form_with model: @user, url: users_sign_up_confirm_path(@user), method: :post, local: true do |f| %>
@@ -67,7 +67,7 @@
           <%= f.password_field :password_confirmation, size: 30, autocomplete: "new-password" %>
         </div>
         <div class="actions text-center">
-          <%= f.submit "新規登録", class: "btn btn-success" %>
+          <%= f.submit "確認画面へ", class: "btn btn-success" %>
         </div>
       <% end %>
       <p class="mt-5"><span style="background-color:#fc9">既に登録済みの方</span></p>
