--- a/app/views/users/registrations/confirm.html.erb
+++ b/app/views/users/registrations/confirm.html.erb
@@ -2,6 +2,10 @@
   <div class="row">
     <div class="col-6 mx-auto my-5">
       <h2 class="text-center mb-3">入力情報確認</h2>
+      <p class="text-center">
+        以下の内容でよろしいですか？<br/>
+        間違いがなければ、「新規登録」ボタンを押してください。
+      </p>
       <table class="table mt-5">
         <tr>
           <th>名前</th>
@@ -67,8 +71,8 @@
         <%= hidden_field :user, :introduction, :value => params[:user][:introduction] %>
         <%= hidden_field :user, :password, :value => params[:user][:password] %>
         <div class="actions text-center">
-          <%= f.submit "修正する", class: "btn btn-danger", name: :back %>
-          <%= f.submit "登録する", class: "btn btn-success" %>
+          <%= f.submit "修正する", class: "btn btn-danger mx-3", name: :back %>
+          <%= f.submit "新規登録", class: "btn btn-success mx-3" %>
         </div>
       <% end %>
     </div>
