[Fix]ログイン後の遷移先

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid sign_up">
+<div class="container-fluid bg-gray">
   <div class="row">
     <div class="mx-auto mt-2">
       <h1 class="text-center">Shall We Dance?</h1>
