--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,16 +73,11 @@ body{
   background-color: #ECEFF1;
 }
 
-.sign_up {
-  background-color: #ECEFF1;
-}
-
 .prompt {
   background-image: url(man.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
-  background-color: #ECEFF1;
   position: relative;
 }
 
@@ -97,4 +92,8 @@ body{
 
 .pagination {
   justify-content: center;
+}
+
+.bg-gray {
+  background-color: #ECEFF1;
 }
