--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container-fluid bg-gray">
   <div class="row">
-    <div class="col-6 mx-auto">
-      <h2>募集要項編集</h2>
+    <div class="col-6 mx-auto my-5">
+      <h2 class="text-center mb-4">募集要項編集</h2>
       <%= form_with model: @post, local: true do |f| %>
         <div class="field">
           <%= f.label :status, "プロ・アマ希望" %><br/>
