--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
-<div class="container-fluid bg-gray">
+<div class="container">
   <div class="row">
-    <div class="col-6 mx-auto my-5">
+    <div class="mx-auto my-5">
       <h2 class="text-center mb-4">募集要項編集</h2>
       <%= form_with model: @post, local: true do |f| %>
         <div class="field">
