--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -1,9 +1,13 @@
-<div class="container">
+<div class="container favorite">
   <div class="row">
-    <div class="col-6 mx-auto">
-      <h2>気になる一覧</h2>
-        <% @posts.each do |post| %>
-          <%= render "posts/index", post: post, user: post.user %>
+    <div class="col-6 mx-auto my-5">
+      <h2 class="text-center mb-5">気になる一覧</h2>
+        <% if @posts.exists? %>
+          <% @posts.each do |post| %>
+            <%= render "posts/index", post: post, user: post.user %>
+          <% end %>
+        <% else %>
+          <p class="text-center">現在、気になる方はいません</p>
         <% end %>
       </table>
     </div>
