[Add]ファビコン

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #top {
-  background-image: url(wedding-1605322_1280.jpg);
+  background-image: url(dancing.jpg);
   background-size: cover;
   background-position: center;
   min-height: 100vh;
