--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -2,28 +2,30 @@
   <div class="row">
     <div class="col-5 mx-auto chat">
       <h2 class="text-center my-3"><%= @user.name %> さんとのチャット</h2>
-      <% @chats.each do |chat| %>
-        <% if chat.user_id == current_user.id %>
-          <div class="my-says">
-            <span class="small text-muted"><%= time_ago_in_words(chat.created_at)%>前</span>
-            <p><%= chat.message %></p>
-          </div>
-        <% else %>
-          <div class="balloon">
-            <div class="icon">
-              <%= attachment_image_tag @user, :profile_image, size: "50x50", fallback: "no-image-icon.jpg", style: "border-radius: 50%;" %>
-            </div>
-            <div class="chatting">
-              <div class="other-says">
-                <p><%= chat.message %></p>
-              </div>
+      <div class="says-box">
+        <% @chats.each do |chat| %>
+          <% if chat.user_id == current_user.id %>
+            <div class="my-says">
               <span class="small text-muted"><%= time_ago_in_words(chat.created_at)%>前</span>
+              <p><%= chat.message %></p>
             </div>
-          </div>
+          <% else %>
+            <div class="balloon">
+              <div class="icon">
+                <%= attachment_image_tag @user, :profile_image, size: "50x50", fallback: "no-image-icon.jpg", style: "border-radius: 50%;" %>
+              </div>
+              <div class="chatting">
+                <div class="other-says">
+                  <p><%= chat.message %></p>
+                </div>
+                <span class="small text-muted"><%= time_ago_in_words(chat.created_at)%>前</span>
+              </div>
+            </div>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
       <div class="my-3 text-right">
-        <%= form_with model: @chat, local: true do |f| %>
+        <%= form_with model: @chat do |f| %>
           <%= f.text_field :message, size: 30 %>
           <%= f.hidden_field :room_id %>
           <%= f.submit "送信" %>
