[Add]トップ画面のレスポンシブ対応

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -32,11 +32,11 @@
           <%= f.label :status, 'プロ', value: "プロ" %>
         </div>
         <div class="field">
-          <%= f.label :age, "年齢※" %><br/>
+          <%= f.label :age, "年齢(半角)※" %><br/>
           <%= f.number_field :age, min: 0, max: 100 %>歳
         </div>
         <div class="field">
-          <%= f.label :height, "身長※" %><br/>
+          <%= f.label :height, "身長(半角)※" %><br/>
           <%= f.number_field :height, min: 100, max: 200 %>cm
         </div>
         <div class="field">
