--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -57,3 +57,11 @@
 .about-text {
   line-height: 1.9rem;
 }
+
+@media screen and (max-width:767px){
+
+  #top {
+    background-image: url(tango.jpg);
+  }
+
+}
