--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,9 +49,9 @@
         </tr>
       </table>
     </div>
-    <div>
+    <div class ="col-4">
       <% if @user.id == current_user.id %>
-        <ul class="mt-5 side_menu">
+        <ul class="mt-5 pl-0 side_menu">
           <li class="nav-item">
             <%= link_to edit_user_path(@user), class: "btn" do %>
               <i class="fas fa-user-edit fa-lg"></i> プロフィール編集
@@ -99,7 +99,7 @@
           <% end %>
         </div>
       <% else %>
-        <ul class="mt-5 text-left side_menu">
+        <ul class="mt-5 pl-0 side_menu">
           <li class="nav-item">
             <% if Post.where(user_id: @user.id).exists? %>
               <%= link_to post_path(@user.post), class: "btn" do %>
