--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,7 +74,7 @@ body{
 }
 
 .prompt {
-  background-image: url(man.jpg);
+  background-image: image-url("man.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
