[Fix]新規登録時のRouting error

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body>
     <main>
       <%= render 'layouts/header' %>
-        <%= yield %>
+        <div class="main-contents"><%= yield %></div>
       <%= render 'layouts/footer' %>
     </main>
   </body>
