--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,77 +1,1 @@
-<div class="container-fluid bg-gray">
-  <div class="row">
-    <div class="mx-auto mt-2">
-      <h1 class="text-center">Shall We Dance?</h1>
-      <h2 class="text-center">新規登録</h2>
-      <p class="sign_up_info text-center">
-        以下の項目にご記入の上、「確認画面へ」ボタンを押してください。<br/>
-        (※は必須項目です。)
-      </p>
-      <%= form_with model: @user, url: users_sign_up_confirm_path(@user), method: :post, local: true do |f| %>
-        <%= render "users/shared/error_messages", resource: resource %>
-        <div class="field">
-          <%= f.label :name, "名前※" %><br/>
-          <%= f.text_field :name, size: 30 %>
-        </div>
-        <div class="field">
-          <%= f.label :email, "メールアドレス※" %><br/>
-          <%= f.email_field :email, size: 30 %>
-        </div>
-        <div class="field">
-          <%= f.label "募集対象※" %><br/>
-          <%= f.radio_button :target, 'true' %>
-          <%= f.label :target, 'リーダー', value: true %>
-          <%= f.radio_button :target, 'false' %>
-          <%= f.label :target, 'パートナー', value: false %>
-        </div>
-        <div class="field">
-          <%= f.label "プロ/アマ※" %><br/>
-          <%= f.radio_button :status, 'アマチュア' %>
-          <%= f.label :status, 'アマチュア', value: "アマチュア" %>
-          <%= f.radio_button :status, 'プロ' %>
-          <%= f.label :status, 'プロ', value: "プロ" %>
-        </div>
-        <div class="field">
-          <%= f.label :age, "年齢(半角)※" %><br/>
-          <%= f.number_field :age, min: 0, max: 100 %>歳
-        </div>
-        <div class="field">
-          <%= f.label :height, "身長(半角)※" %><br/>
-          <%= f.number_field :height, min: 100, max: 200 %>cm
-        </div>
-        <div class="field">
-          <%= f.label :area, "地域※" %><br/>
-          <%= f.select :area, User.areas.keys.to_a, include_blank: "選択して下さい" %>
-        </div>
-        <div class="field">
-          <%= f.label :experience, "ダンス歴※" %><br/>
-          <%= f.select :experience, User.experiences.keys.to_a, include_blank: "選択して下さい" %>
-        </div>
-        <div class="field">
-          <%= f.label :club_status, "学連経験※" %><br/>
-          <%= f.select :club_status, User.club_statuses.keys.to_a, include_blank: "選択して下さい" %>
-        </div>
-        <div class="field">
-          <%= f.label :introduction, "その他(持ち級など)" %><br/>
-          <%= f.text_area :introduction, size: "50x5" %>
-        </div>
-        <div class="field">
-          <%= f.label :password, "パスワード※" %>
-          <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %>文字以上)</em>
-          <% end %><br/>
-          <%= f.password_field :password, size: 30, autocomplete: "new-password" %>
-        </div>
-        <div class="field">
-          <%= f.label :password_confirmation, "パスワード(確認用)※" %><br/>
-          <%= f.password_field :password_confirmation, size: 30, autocomplete: "new-password" %>
-        </div>
-        <div class="actions text-center">
-          <%= f.submit "確認画面へ", class: "btn btn-success" %>
-        </div>
-      <% end %>
-      <p class="mt-5"><span style="background-color:#fc9">既に登録済みの方</span></p>
-      <p><%= link_to "こちら", new_user_session_path %> からログインしてください。</p>
-    </div>
-  </div>
-</div>
+<%= render "new", user: @user %>
