--- a/app/views/users/registrations/_new.html.erb
+++ b/app/views/users/registrations/_new.html.erb
@@ -63,6 +63,11 @@
           <%= f.label :password_confirmation, "パスワード(確認用)※" %><br/>
           <%= f.password_field :password_confirmation, size: 30, autocomplete: "new-password" %>
         </div>
+        <script>
+        　$(function() {
+              $('html,body').animate({ scrollTop: 0 }, '1');
+          });
+        </script>
         <div class="actions text-center">
           <%= f.submit "確認画面へ", class: "btn btn-success" %>
         </div>
