--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-6 mx-auto my-5">
       <h2 class="text-center">ユーザー一覧</h2>
+      <p class="notice"><%= flash[:notice] %></p>
       <table class="table my-3">
         <tr>
           <th>ユーザーID</th>
