--- a/app/views/favorites/_favorite-btn.html.erb
+++ b/app/views/favorites/_favorite-btn.html.erb
@@ -1,5 +1,5 @@
 <% if post.favorited_by?(current_user) %>
-  <%= link_to "気になる解除", post_favorites_path(post), method: :delete, remote: true, class: "btn btn-danger" %>
+  <%= link_to "いいね解除", post_favorites_path(post), method: :delete, remote: true, class: "btn btn-secondary" %>
 <% else %>
-  <%= link_to "気になる", post_favorites_path(post), method: :post, remote: true, class: "btn btn-info" %>
+  <%= link_to "いいね", post_favorites_path(post), method: :post, remote: true, class: "btn btn-danger" %>
 <% end %>
