--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -70,7 +70,7 @@
           </li>
           <li class="nav-item">
             <%= link_to user_favorites_path(@user), class: "btn" do %>
-              <i class="fas fa-heart fa-lg"></i> 気になる一覧
+              <i class="fas fa-heart fa-lg"></i> いいね一覧
             <% end %>
           </li>
           <li class="nav-item">
